<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#DDA0DD"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="100dp"
    app:cardBackgroundColor="#6666FF"
    app:cardElevation="8dp"
    app:contentPadding="20dp"
    android:orientation="vertical"
    tools:context="com.example.jbw.go4fresh.AddNewItem">


<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/add_new"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="70dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/add_new_item"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/itemName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name"
            android:inputType="textCapWords"
            android:maxLength="20" />

        <EditText
            android:id="@+id/itemType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_type"
            android:inputType="textCapWords"
            android:maxLength="20" />

        <EditText
            android:id="@+id/itemQuantity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity_inKg"
            android:inputType="number"
            android:maxLength="4" />


        <!--<EditText
            android:id="@+id/itemQuality"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quality"
            android:inputType="textCapWords"
            android:maxLength="15" />-->

        <EditText
            android:id="@+id/minPrice"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/min_price"
            android:inputType="number"
            android:maxLength="4" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="3dp"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:prompt="@string/quality"
            android:layout_gravity="center"
            android:entries="@array/quality_array"
            android:layout_height="45dp"
            android:background="#FFFFFF"
            android:spinnerMode="dialog" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:weightSum="5">

            <Button
                android:id="@+id/addItemButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:layout_marginRight="10dp"
                android:background="@drawable/border"
                android:text="@string/add_product" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:layout_weight="2.5"
                android:layout_marginLeft="10dp"
                android:text="@string/cancel" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>
</android.support.v7.widget.CardView>

