<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginTop="100dp"
    android:layout_marginBottom="100dp"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/nonet"
        android:contentDescription="@string/image" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="italic"
        android:textColor="#008000"
        android:text="@string/no_internet" />

    <Button
        android:id="@+id/refreshPage"
        android:layout_width="match_parent"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="80dp"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#008000"
        android:text="@string/refresh_page"/>
</LinearLayout>