<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="6"
    app:cardBackgroundColor="#DAA520"
    app:cardElevation="8dp"
    app:contentPadding="15dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <ImageView
            android:src="@drawable/rupee"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/add_price"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/addCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_your_price"
            android:maxLength="4"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:weightSum="5">

            <Button
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="2.5"
                android:background="@drawable/border"
                android:text="@string/add_cost" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="2.5"
                android:background="@drawable/border"
                android:text="@string/cancel" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>